# agent-arborist

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.arborist/: last_run_result.json
.devcontainer/: .dockerignore  .env.example  Dockerfile  devcontainer.json
dashboard/: serve-dashboard.py
docs/: 54-integration.md  BL-583-test-plan-merge.md  agent-arborist.md  better-run-info-status.md  dag-to-dagu-spec.md  dashboard-visualization.md  devcontainer-implementation-review.md  devcontainer-support.md  devcontainer.md  hooks-plan.md  jujutsu-fork.md  merge-madness.md  redo-research-git-elegant.md  redo-tasks-git-elegant.md  restart-plan.md  trailer-output.md
docs/archive/: REDESIGN-merge-tree.md  better-dag-visibility.md  concurrency-plan.md  config-plan.md  devcontainer-implementation-review.md  devcontainer-support.md  hooks-plan.md  jujutsu-fork.md  parallelism-issues.md  redo-research-git-elegant.md  redo-tasks-git-elegant.md  sequential-simplification-plan.md
docs/examples/: arborist-run.yml
docs/manual/: 01-introduction.md  02-quick-start.md  03-task-specs.md  04-task-trees.md  05-execution.md  06-git-integration.md  07-configuration.md  08-runners.md  09-cli-reference.md  10-troubleshooting.md  11-devcontainers.md  12-github-action.md  README.md  dashboard.md
schemas/: step-outputs.schema.json
src/agent_arborist/: __init__.py  branch_manifest.py  checks.py  cli.py  config.py  constants.py  container_context.py  container_runner.py  dag_builder.py  dag_generator.py  dagu_runs.py  devcontainer.py  git_tasks.py  home.py  jj_cli.py  jj_dag_builder.py  jj_manifest.py  jj_tasks.py  manifest.py  restart_context.py  runner.py  spec.py  step_results.py  task_cli.py  task_spec.py  task_state.py  tasks.py
tests/: __init__.py  conftest.py  test_checks.py  test_cli.py  test_concurrency.py  test_config.py  test_config_steps.py  test_constants.py  test_container_context.py  test_container_runner.py  test_dag_builder.py  test_dag_commands.py  test_dag_generator_integration.py  test_dag_generator_mocked.py  test_dag_generator_providers.py  test_dag_generator_validation.py  test_dag_run_integration.py  test_dag_visibility_e2e.py  test_dagu_runs.py  test_dashboard.py  test_devcontainer.py  test_devcontainer_integration.py  test_e2e_ai.py  test_e2e_devcontainer.py  test_e2e_steps.py  test_full_e2e_calculator.py  test_git_tasks.py  test_home.py  test_hooks.py  test_hooks_advanced.py  test_hooks_integration.py  test_integration.py  test_jj_cli.py  test_jj_dag_builder.py  test_jj_manifest.py  test_jj_tasks.py  test_json_output.py  test_logging.py  test_manifest.py  test_merge_rollup.py  (+13 more)
tests/git/: __init__.py  (+2 more)
viz-output/: calculator-metrics.json  calculator-tree.json
(+138 files in other folders)
