[project]
name = "agent-arborist"
version = "0.1.0"
description = "Automated Task Tree Executor - DAG workflow orchestration with Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
arborist = "agent_arborist.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_arborist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
