[project]
name = "agent-arborist"
version = "0.1.0"
description = "Automated Task Tree Executor - DAG workflow orchestration with Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
arborist = "agent_arborist.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_arborist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests that require actual CLI tools (deselect with '-m \"not integration\"')",
    "flaky: marks non-deterministic tests that use AI inference (run with '-m flaky')",
    "claude: marks tests that require claude CLI",
    "opencode: marks tests that require opencode CLI",
    "gemini: marks tests that require gemini CLI",
    "dagu: marks tests that require dagu CLI",
]
