[project]
name = "agent-arborist"
version = "0.2.0"
description = "Git-native task tree orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
arborist = "agent_arborist.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_arborist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not integration and not container'"
markers = [
    "integration: marks tests that require actual CLI tools",
    "git: marks tests that require git CLI",
    "slow: marks tests that are slow",
    "e2e: end-to-end tests",
    "container: marks tests that build/run real devcontainers (requires docker)",
]
